welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:7: error: value lengh is not a member of Array[Int]
    return(c/nums.lengh - 1)
                  ^